<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_layout"
    android:background="@drawable/bg_game">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <View
        android:id="@+id/line0"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/epg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_south" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="血量:"
                android:textColor="@color/epg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="法力:"
                android:textColor="@color/epg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="经验:"
                android:textColor="@color/epg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            >
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center">
                <ProgressBar
                    android:id="@+id/bar_hp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="30"
                    android:progressDrawable="@drawable/progress_bar_hp" />

                <TextView
                    android:id="@+id/tv_hp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="30/100"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </FrameLayout>


            <FrameLayout
                android:layout_weight="1"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center">
                <ProgressBar
                    android:id="@+id/bar_mp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="30"
                    android:progressDrawable="@drawable/progress_bar_mp" />

                <TextView
                    android:id="@+id/tv_mp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="30/100"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_weight="1"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center">
                <ProgressBar
                    android:id="@+id/bar_exp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:max="100"
                    android:progress="30"
                    android:progressDrawable="@drawable/progress_bar_exp" />

                <TextView
                    android:id="@+id/tv_exp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="30/100"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            >
            <TextView
                android:id="@+id/tv_map_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="恶魔镇"
                android:textColor="@color/c_pink"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_map_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="友方"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline2"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/epg"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/epg"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/game_btn_trade"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/bg_button_solid_select"
        android:text="@string/game_trade"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/rv_map_detail"
        app:layout_constraintTop_toTopOf="@+id/btn_north" />

    <Button
        android:id="@+id/game_btn_skill"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/bg_button_solid_select"
        android:text="@string/game_skill"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_south"
        app:layout_constraintEnd_toEndOf="@+id/line0" />
    <Button
        android:id="@+id/btn_center"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_simple_select_shape_center"
        android:text="恶魔镇"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_north" />

    <Button
        android:id="@+id/btn_east"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:textSize="13sp"
        android:layout_marginLeft="5dp"
        android:onClick="goRight"
        android:background="@drawable/bg_button_select"
        android:text="秋水镇"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btn_center"
        app:layout_constraintTop_toTopOf="@+id/btn_center" />

    <Button
        android:id="@+id/btn_west"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:textSize="13sp"
        android:onClick="goLeft"
        android:layout_marginRight="5dp"
        android:background="@drawable/bg_button_select"
        android:text="河东村"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_center"
        app:layout_constraintTop_toTopOf="@+id/btn_center" />

    <Button
        android:id="@+id/btn_north"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_select"
        android:onClick="goTop"
        android:text="北荒漠"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/btn_center"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <Button
        android:id="@+id/btn_south"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_button_select"
        android:onClick="goDown"
        android:text="寒江岭"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/btn_center"
        app:layout_constraintTop_toBottomOf="@+id/btn_center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/self_describe"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:gravity="center"
                android:text="血染天下 lv:18 "
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/game_btn_bag"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_select"
            android:textColor="@color/white"
            android:text="@string/game_bag"
            />
        <Button
            android:id="@+id/game_btn_map"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_select"
            android:textColor="@color/white"
            android:text="@string/game_map"
            />
        <Button
            android:id="@+id/game_btn_state"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_select"
            android:textColor="@color/white"
            android:text="@string/game_state"
            />
        <Button
            android:id="@+id/game_btn_chat"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_select"
            android:textColor="@color/white"
            android:text="@string/game_chat"
            />
    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>